--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ a:after {
 /* Header Wrap */
 .header {
   background: #FFFFFF;
-  background: url(..web_resume/images/glacier.jpg) no-repeat center top;
+  background: url(../images/glacier.jpg) no-repeat center top;
   padding-top:140px;
   text-align:center;
   background-attachment: relative;
