--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f2f2f2;
-  font-family: "Lato"; /* OPTIONAL: Google Fonts - base font */
+  font-family: 'Roboto Mono', monospace;; /* OPTIONAL: Google Fonts - base font */
   font-weight: 300;
   font-size: 16px;
   color: #555;
@@ -11,7 +11,7 @@ body {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway"; /* OPTIONAL: Google Fonts - title font */
+  font-family: 'Oswald', sans-serif; /* OPTIONAL: Google Fonts - title font */
   font-weight: 300;
   color: #333;
 }
@@ -69,7 +69,7 @@ a:after {
 
 /* Header Wrap */
 .header {
-  background: #1CBCAD;
+  background: #FFFFFF;
   background: url(../images/glacier.jpg) no-repeat center top;
   padding-top:140px;
   text-align:center;
@@ -77,7 +77,7 @@ a:after {
   background-position: center center;
   min-height: 500px;
   width: 100%;
-  
+
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
@@ -92,16 +92,59 @@ a:after {
 .header h1 {
   font-size: 80px;
   color: white;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0);
+  /*background: rgba(0,0,0,0.2);*/
 }
 
 .header h3 {
   font-size: 20px;
   color: white;
+  background: rgba(0,0,0,0,);
+  /*background: rgba(0,0,0,0.2);*/
 }
 
 .header h3 a {
   color: #fff;
+}
+
+/*Header for Hobbies Page*/
+.headerHobbies {
+  background: #FFFFFF;
+  background: url(../images/Aspect_Skis2.jpg) no-repeat center top;
+  padding-top:140px;
+  text-align:center;
+  background-attachment: relative;
+  background-position: center center;
+  min-height: 500px;
+  width: 100%;
+
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.headerHobbies h1 {
+  font-size: 80px;
+  color: black;
+  background: rgba(0,0,0,0);
+  /*background: rgba(0,0,0,0.2);*/
+}
+
+.headerHobbies h3 {
+  font-size: 20px;
+  color: black;
+  background: rgba(0,0,0,0,);
+  /*background: rgba(0,0,0,0.2);*/
+}
+
+.headerHobbies h3 a {
+  color: black;
 }
 
 /* About Wrap */
@@ -110,7 +153,7 @@ a:after {
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
-} 
+}
 
 .about h5, p {
   color: white;
@@ -204,11 +247,11 @@ body {
 
 @-webkit-keyframes fadeIn {
   0% {
-    opacity: 0; 
+    opacity: 0;
   }
 
   100% {
-    opacity: 1; 
+    opacity: 1;
   }
 }
 
@@ -239,7 +282,7 @@ body {
 
   100% {
     opacity: 1;
-  } 
+  }
 }
 
 .fadeIn {
