--- a/css/main.css
+++ b/css/main.css
@@ -131,9 +131,10 @@ a:after {
 
 .headerHobbies h1 {
   font-size: 80px;
-  color: white;
-  /*background: rgba(0,0,0,0);*/
-  background: rgba(0,0,0,0.2);
+  color: black;
+  text-align: right;
+  background: rgba(0,0,0,0);
+  /*background: rgba(0,0,0,0.2);*/
 }
 
 .headerHobbies h3 {
